fix: more spacing bottom figcaption

--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -88,6 +88,11 @@ article {
   flex-direction: column;
 }
 
+article > time {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
 article > div {
   border-left: solid 6px #3e3232;
   padding-left: 0.8rem;
